# gematria

./: Cargo.toml  gematria-adc4df9883d223ce.js  gematria-adc4df9883d223ce_bg.wasm  index.html  readme.md
src/: lib.rs  main.rs
src/core/: meanwords.txt  misc.rs  mod.rs  nicewords.txt
src/state/: full_state.rs  mod.rs
src/web/: app.rs  mod.rs
tests/: my_tests.rs
