[package]
name = "gematria"
version = "0.1.0"
authors = ["Mark Wainwright <wainwrightml@gmail.com>"]
license = "MIT"
keywords = ["numberology", "parody"]
edition= "2021"

[dependencies]
itertools = "0.10.3"
num = "0.4"
num-traits = "0.2"
serde = { version = "1.0", features = ["derive", "rc"] }
strum = {version= "0.24"}

# borsh = "0.9"

chrono = {version="0.4", features = ["serde", "wasmbind"]}

log = "0.4"
wasm-logger = "0.2"
yew = { git = "https://github.com/yewstack/yew.git", features = ["csr",] }
yewdux = { git = "https://github.com/intendednull/yewdux.git" }

wasm-bindgen-futures = "0.4"
wasm-bindgen= { version = "0.2", features = ["serde"] }
js-sys = "0.3"

[dependencies.web-sys]
version = "0.3"
features = [
    "HtmlInputElement",
]



[profile.release]
panic = 'abort'
codegen-units = 1
lto = true
opt-level = 3


[dev-dependencies]
bencher= "0.1"
ntest = "0.8"

